@@ -8,6 +8,7 @@ export DH_COMPAT=4
 CLC_SBIN	:= usr/sbin/
 CLC_BIN		:= usr/bin/
 CLC_SRC 	:= usr/share/common-lisp/source/common-lisp-controller/
+CLC_LIB		:= usr/lib/common-lisp-controller/
 
 SBIN_PROGS 	:= register-common-lisp-source unregister-common-lisp-source \
 		register-common-lisp-implementation \
@@ -20,6 +21,8 @@ BIN_PROGS	:= clc-send-command clc-autobuild-library clc-autobuild-check \
 
 CLC_SRC_FILES	:= common-lisp-controller.lisp pre-sysdef-install.lisp \
 		 post-sysdef-install.lisp
+
+CLC_UTILS	:= debug-daemon-problems.sh
 
 MAN_FILES := man/clc-send-command.1 man/clc-build-daemon.8 \
 	man/register-common-lisp-implementation.8 \
@@ -59,6 +62,7 @@ install: build
 	dh_install $(SBIN_PROGS) $(CLC_SBIN)
 	dh_install $(BIN_PROGS) $(CLC_BIN)
 	dh_install $(CLC_SRC_FILES) $(CLC_SRC)
+	dh_install $(CLC_UTILS) $(CLC_LIB)
 	dh_install lisp-config.lisp etc/
 
 # Build architecture-independent files here.
